--- a/gitgraph.1
+++ b/gitgraph.1
@@ -4,9 +4,9 @@ gitgraph \- a git graphs generator
 .SH SYNOPSIS
 gitgraph \fIDIRECTORY\fR
 .SH DESCRIPTION
-Scan \fIDIRECTORY\fR for git repository.
+Scan \fIDIRECTORY\fR for a git repository.
 .br
-If git repo found then it will draw a graph of contributions.
+If git repo found then it will draw a graph of contributions on stdout in SVG format.
 .SH AUTHOR
 Romain Porte <microjoe@mailoo.org>
 .SH COPYRIGHT
