Using the standard groff syntax for links

--- a/gitgraph.1
+++ b/gitgraph.1
@@ -10,8 +10,10 @@ If git repo found then it will draw a graph of contributions on stdout in SVG fo
 .SH AUTHOR
 Romain Porte <microjoe@mailoo.org>
 .SH COPYRIGHT
-Copyright (C) 2014  Romain Porte.  License AGPLv3+: GNU Affero GPL version 3 or
-later <http://gnu.org/licenses/agpl.html>.
+Copyright (C) 2014  Romain Porte.
+.UR http://gnu.org/licenses/agpl.html
+License AGPLv3+: GNU Affero GPL version 3 or later
+.UE .
 .br
 This is free software: you are free to change and redistribute it.  There is NO
 WARRANTY, to the extent permitted by law.
